--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 CPE233Labs.cache/wt/project.wpc
 CPE233Labs.srcs/sources_1/imports/Downloads/cntr_up_clr_nb_v1_03.v
+CPE233Labs.cache/wt/webtalk_pa.xml
+CPE233Labs.cache/wt/gui_handlers.wdf
+CPE233Labs.cache/wt/java_command_handlers.wdf
+CPE233Labs.cache/wt/project.wpc
