Add mem dumpo for exp 8

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ CPE233Labs.cache/wt/webtalk_pa.xml
 CPE233Labs.cache/wt/gui_handlers.wdf
 CPE233Labs.cache/wt/java_command_handlers.wdf
 CPE233Labs.cache/wt/project.wpc
+.DS_Store
